# CSC-305

./: .gitignore  CMakeLists.txt  CppProperties.json  LICENSE  README.md
assignment2/: CMakeLists.txt  common.h  export.cpp  main.cpp  objFile.cpp  objFile.h
assignment2/Mesh/: CubeBuilder.cpp  CubeBuilder.h  CylinderBuilder.cpp  CylinderBuilder.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  SphereBuilder.cpp  SphereBuilder.h
assignment3/: CMakeLists.txt  bezier.cpp  bezier.h  common.h
assignment3/animation/: CMakeLists.txt  main.cpp
assignment3/editor/: CMakeLists.txt  line_fshader.glsl  main.cpp
mouse_framebuffer/: CMakeLists.txt  main.cpp
raytrace/: CMakeLists.txt  camera.cpp  camera.h  common.h  light.cpp  light.h  main.cpp  ray.cpp  ray.h  scene.cpp  scene.h
raytrace/material/: material.cpp  material.h
raytrace/renderizable/: line.cpp  line.h  plane.cpp  plane.h  renderizable.cpp  renderizable.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
raytrace/renderizable/material/: material.cpp  material.h
trianglemesh/: CMakeLists.txt
